# dear_mirl_gui

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: focus_taken.rs  formatting.rs  input.rs  lib.rs  module_manager.rs  module_path.rs  mouse_data.rs  output.rs  prelude.rs  struct_editor_test.rs  test.rs  window_manager.rs
src/gui/: extra.rs  mod.rs
src/modules/: mod.rs
src/modules/concepts/: number_selection_design.ase
src/modules/decoration/: anti_new_line.rs  custom_offset.rs  line.rs  mod.rs  reset_formatting.rs  reset_offset.rs  same_line.rs
src/modules/support/: gui_as_module.rs  mod.rs
src/modules/support/mirl/: collision.rs  mod.rs
src/modules/support/struct_editing/: mod.rs
src/modules/support/struct_editing/primitives/: bool_support.rs  f32_support.rs  f64_support.rs  i32_support.rs  mod.rs  string_support.rs  u8_support.rs
src/modules/widget/: _text_input_old.rs  button.rs  check_box.rs  color_picker.rs  crank.rs  image.rs  image_button.rs  lever.rs  list.rs  misc.rs  mod.rs  number_display.rs  number_input.rs  progress_bar.rs  selection.rs  sliders.rs  struct_editor.rs  text.rs  text_input.rs  window_emulator.rs
