[package]
name = "dear_mirl_gui"
version = "2.1.0"
edition = "2024"
description = "'A Dear ImGui' inspired RmGui lib for 'Mirl'"
license = "MIT"
exclude = ["./modules/concepts/*"]

[dependencies]

# reflectable_derive = { path = "../reflectable_derive" }

mirl = { version = ">=6.0.0", default-features = false, features = [
    "font_support",
    "svg",
    "keycodes",
    "random",
] }

fontdue = ">=0.9.3"
indexmap = ">=2.11"
num-traits = ">=0.2"


[features]
default = []
# BAD_APPLE = []
draw_safe = []
draw_debug = []
focus_debug = []
# f128_support = []
experimental = ["debug-window"]

debug-window = [
    "mirl/minifb",
    "mirl/system",
    "mirl/cursor_show_hotspot",
    "mirl/std",
]

[profile.release]
debug = true
