[package]
name = "dear_mirl_gui"
version = "3.0.0"
edition = "2024"
description = "A 'Dear ImGui' inspired RmGui lib for 'Mirl'"
license = "MIT"
exclude = ["./modules/concepts/*"]
repository = "https://github.com/Miner3D-Gamer/dear_mirl_gui"
keywords = ["gui", "rmgui", "mirl", "debugging", "widgets", "text_editor"]

categories = ["gui", "text_editors"]

[dependencies]

# reflectable_derive = { path = "../reflectable_derive" }

mirl = { version = ">=9.0.1", default-features = false, features = [
    "font_support",
    #"svg",
    "keycodes",
    "random",
    "std",
    "num_traits",
] }

# indexmap = ">=2.11"


[features]
default = ["module_path_naming"]
draw_safe = []
draw_debug = []
focus_debug = []
experimental = ["debug-window"]
coordinate_type_f32 = []
module_path_naming = []

debug-window = [
    "mirl/minifb",
    "mirl/system",
    "mirl/cursor_show_hotspot",
    "mirl/std",
]

# [profile.release]
# debug = true
